manifests/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: employee-attrition-api
  name: employee-attrition-api
spec:
  selector:
    matchLabels:
      app: employee-attrition-api
  template:
    metadata:
      labels:
        app: employee-attrition-api
    spec:
      containers:
        - image: crf2zdht01.azurecr.io/employee-attrition-amd64:latest
          command: ["uvicorn"]
          args: ["app.main:app"]
          resources: {}
          name: employee-attrition-api
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee-attrition-service
  name: employee-attrition-service
spec:
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  selector:
    app: employee-attrition-api
  type: ClusterIP
